new homepage image

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ description: Track and optimize your sales team in real time
 		<p class="subtext editable">Track and optimize your sales team in real time.</p>
 		<div class="cta button alt"><a href="/sign-up/">Get Started Free</a></div>
 		<div>
-			<img src="//placehold.it/1500x945" alt="Screenshot" class="screenshot editable" />
+			<img src="/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
 		</div>
 	</div>
 </section>
@@ -21,7 +21,7 @@ description: Track and optimize your sales team in real time
 				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources. </p>
 			</div>
 			<div class="image">
-				<img src="//placehold.it/1500x938" alt="Screenshot" class="screenshot editable" />
+				<img src="/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
@@ -33,7 +33,7 @@ description: Track and optimize your sales team in real time
 				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources.</p>
 			</div>
 			<div class="image">
-				<img src="//placehold.it/1500x938" alt="Screenshot" class="screenshot editable" />
+				<img src="/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
@@ -45,7 +45,7 @@ description: Track and optimize your sales team in real time
 				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources.</p>
 			</div>
 			<div class="image">
-				<img src="//placehold.it/1500x938" alt="Screenshot" class="screenshot editable" />
+				<img src="/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
