Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 ---
-title: The last sales CRM you'll ever need
+title: "The last sales CRM you'll ever need"
 description: Track and optimize your sales team in real time
 ---
 <section class="hero">
 	<div class="text-container">
-		<h1 class="editable">The last sales CRM <strong>you'll ever want</strong></h1>
+		<h1 class="editable">The most awesome CRM <strong>you'll ever want</strong></h1>
 		<p class="subtext editable">Track and optimize your sales team in real time.</p>
 		<div class="cta button alt"><a href="/sign-up/">Get Started Free</a></div>
 		<div>
@@ -53,7 +53,7 @@ description: Track and optimize your sales team in real time
 	<section class="testimonial">
 		<div class="container flex">
 			<div class="testimonial-block">
-				<div class="square-image editable"><img src="https://source.unsplash.com/6anudmpILw4/600x400" alt="Jim James"></div>
+				<div class="square-image editable"><img src="https://source.unsplash.com/6anudmpILw4/600x400" alt="Jim James" /></div>
 				<blockquote>
 					<p class="editable">Hydra has shaped the business we have today. We have a repeatable sales process and a strategy to scale our team. I recommend Hydra to any business looking to improve their sales.</p>
 					<p class="editable author">Jim James - CEO of Global Corp.</p>
