--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ description: Track and optimize your sales team in real time
 ---
 <section class="hero">
 	<div class="text-container">
-		<h1 class="editable">The most awesome CRM <strong>you'll ever want</strong></h1>
+		<h1 class="editable">Niren's most awesome CRM <strong>you'll ever want</strong></h1>
 		<p class="subtext editable">Track and optimize your sales team in real time.</p>
 		<div class="cta button alt"><a href="/sign-up/">Get Started Free</a></div>
 		<div>
