--- a/about.html
+++ b/about.html
@@ -6,8 +6,12 @@ description: We've built an amazing team of developers, marketers, designers and
 <ul class="staff">
 	{% for person in site.staff_members %}
 		<li>
-			<div class="square-image"><img src="{% include relative-src.html src=person.image_path %}" alt="{{ person.name }}"/></div>
-			<div class="name"><a target="_blank" href="https://twitter.com/{{ person.twitter }}">{{ person.name }}</a></div>
+			<div class="square-image">
+				<img src="{% include relative-src.html src=person.image_path %}" alt="{{ person.name }}"/>
+				</div>
+			<div class="name">
+				<a target="_blank" href="https://twitter.com/{{ person.twitter }}">{{ person.name }}</a>
+			</div>
 			<div class="position">{{ person.position }}</div>
 		</li>
 	{% endfor %}
