--- a/index.html
+++ b/index.html
@@ -1,69 +1,30 @@
 ---
-title: "The last sales CRM you'll ever need"
-description: Track and optimize your sales team in real time
+title: "PowerUp!"
+description: PowerUp
 ---
-<section class="hero">
-	<div class="text-container">
-		<h1 class="editable">Niren's most awesome CRM <strong>you'll ever want</strong></h1>
-		<p class="subtext editable">Track and optimize your sales team in real time.</p>
-		<div class="cta button alt"><a href="/sign-up/">Get Started Free</a></div>
-		<div>
-			<img src="/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
+
+
+
+<div class="row">
+	<div class="small-12 columns">
+		<div class="home__hero">
+			<h3 class="home__hero-h">Join Australia's Top campaigners<br> and change-makers for two days in melbourne,<br> june 6-7</h3>
+		</div>
+		<div class="home__hero">
+			<div class="button home__hero">Book now!</div>
 		</div>
 	</div>
-</section>
-
-<div class="content">
-	<section>
-		<div class="container flex">
-			<div class="text editable">
-				<h2>How can we <strong>double</strong> our sales revenue?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources. </p>
-			</div>
-			<div class="image">
-				<img src="/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
-			</div>
-		</div>
-	</section>
-
-	<section>
-		<div class="container flex">
-			<div class="text editable">
-				<h2>How can I <strong>keep track</strong> of my sales team?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources.</p>
-			</div>
-			<div class="image">
-				<img src="/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
-			</div>
-		</div>
-	</section>
-
-	<section>
-		<div class="container flex">
-			<div class="text editable">
-				<h2>How can I <strong>forecast</strong> the next 90 days?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources.</p>
-			</div>
-			<div class="image">
-				<img src="/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
-			</div>
-		</div>
-	</section>
-
-	<section class="testimonial">
-		<div class="container flex">
-			<div class="testimonial-block">
-				<div class="square-image editable"><img src="https://source.unsplash.com/6anudmpILw4/600x400" alt="Jim James" /></div>
-				<blockquote>
-					<p class="editable">Hydra has shaped the business we have today. We have a repeatable sales process and a strategy to scale our team. I recommend Hydra to any business looking to improve their sales.</p>
-					<p class="editable author">Jim James - CEO of Global Corp.</p>
-				</blockquote>
-			</div>
-		</div>
-	</section>
-
-	<section class="bottom-cta">
-		<h2 class="editable"><strong>Improve</strong> your sales process today</h2>
-		<div class="button alt"><a href="#">Get Started Free</a></div>
-	</section>
 </div>
+
+
+<div class="row">
+	<div class="small-12 columns">
+		<h2 class="breakout-text"><span>Key note speaker info and other random heading text to accompany.</span></h2>
+	</div>
+</div>
+
+
+
+
+
+
