--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@ description: PowerUp
 
 <div class="row">
 	<div class="small-12 columns">
+		<div class="home__powerup">
+			<img src="images/bigP2.jpg" class="big-p">
+		</div>
 		<div class="home__hero">
-			<h3 class="home__hero-h">Join Australia's Top campaigners<br> and change-makers for two days in melbourne,<br> june 6-7</h3>
+			<h3 class="home__hero-h editable">Join Australia's Top campaigners<br> and change-makers for two days in melbourne,<br> june 6-7</h3>
 		</div>
 		<div class="home__hero">
 			<div class="button home__hero">Book now!</div>
@@ -18,11 +21,30 @@ description: PowerUp
 
 
 <div class="row">
-	<div class="small-12 columns">
+	<div class="small-12 columns breakout-container">
 		<h2 class="breakout-text"><span>Key note speaker info and other random heading text to accompany.</span></h2>
 	</div>
 </div>
 
+<div class="row expanded">
+	<img src="images/vigil.jpg">
+</div>
+
+
+<div class="row expanded">
+	<div class="small-12 columns">
+		<div class="img__container">
+			<img src="images/vigil.jpg" class="img__left">
+			<div class="img__text-container">
+				<div class="img__text-wrapper">
+							<h2 class="breakout-text"><span>Key note speaker info and other random heading text to accompany.</span></h2>
+
+				</div>
+			</div>
+		</div>
+	</div>
+	
+</div>
 
 
 
