--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@ title: "PowerUp!"
 description: PowerUp
 ---
 
-
+<div class="white-bg">
+</div>
 
 <div class="row">
 	<div class="small-12 columns">
@@ -24,10 +25,6 @@ description: PowerUp
 	<div class="small-12 columns breakout-container">
 		<h2 class="breakout-text"><span>Key note speaker info and other random heading text to accompany.</span></h2>
 	</div>
-</div>
-
-<div class="row expanded">
-	<img src="images/vigil.jpg">
 </div>
 
 
