--- a/speaker-info.html
+++ b/speaker-info.html
@@ -1,9 +1,15 @@
 ---
 ---
+<div class="white-bg">
+</div>
+<div class="row expanded">
+	<img src="../images/bigP.jpg" class="biggP">
+</div>
 
-
-<div class="row">
+<div class="row bg">
+	
 	<div class="small-12 columns speakers__hero">
+		
 		<h3 class="speakers__subh">Join Australia's Top campaigners<br> and change-makers for two days in melbourne,<br> june 6-7</h3>
 		<h1 class="speakers__h"> Speakers and co-chairs </h1>
 		<div>
