Basic structure of the home page with a bit of styling

--- a/index.html
+++ b/index.html
@@ -6,42 +6,116 @@ description: PowerUp
 <div class="white-bg">
 </div>
 
+<img src="images/vigil.jpg">
 <div class="row">
-	<div class="small-12 columns">
-		<div class="home__powerup">
-			<img src="images/bigP2.jpg" class="big-p">
-		</div>
-		<div class="home__hero">
-			<h3 class="home__hero-h editable">Join Australia's Top campaigners<br> and change-makers for two days in melbourne,<br> june 6-7</h3>
-		</div>
-		<div class="home__hero">
-			<div class="button home__hero">Book now!</div>
+	<div class="small-12 columns home__hero">
+		<h1 class="title">PowerUp!</h1>
+		<h3 class="sub-heading"> Key note speaker info and other random heading text to accompany. </h3>
+		<div class="button__wrapper">
+			<a class="button home__hero-button">Book now!</a>
 		</div>
 	</div>
 </div>
 
-
 <div class="row">
-	<div class="small-12 columns breakout-container">
-		<h2 class="breakout-text"><span>Key note speaker info and other random heading text to accompany.</span></h2>
+	<div class="small-12 columns home__our-story">
+		<h2 ><span class="dotted-underline"> Our Story </span></h2>
+		<p> PowerUp is a flagship GetUp event --- it will define our reputation with our most active committed GetUp members, many of our major donors, close allies, and sponsorsPowerUp is a flagship GetUp event --- it will define our reputation with our most active committed GetUp members, many of our major donors, close allies, and sponsors  </p>
 	</div>
 </div>
 
+<div class="row narrative-container">
+	<div class="medium-2">
+		<p class="narrative"> Join our first member conference </p>
+	</div>
+	<div class="medium-1">
 
-<div class="row expanded">
-	<div class="small-12 columns">
-		<div class="img__container">
-			<img src="images/vigil.jpg" class="img__left">
-			<div class="img__text-container">
-				<div class="img__text-wrapper">
-							<h2 class="breakout-text"><span>Key note speaker info and other random heading text to accompany.</span></h2>
+	</div>
+	<div class="medium-2">
+		<p class="narrative"> Develop critical skills and GetUp’s strategy </p>
+	</div>
+	<div class="medium-1">
 
+	</div>
+	<div class="medium-2">
+		<p class="narrative"> Develop critical skills and GetUp’s strategy </p>
+	</div>
+	<div class="medium-1">
+
+	</div>
+	<div class="medium-2">
+		<p class="narrative"> Develop critical skills and GetUp’s strategy </p>
+	</div>
+</div>
+
+<div class="home__image-container">
+
+	<img src="images/vigil.jpg" class="home__image home__image-left">
+	
+
+	<div class="row expanded home__section-container">
+		<div class="small-6 small-offset-6 columns gradient home__section-gradient radius-left">
+			<div class="row">
+				<div class="medium-8 columns">
+					<h2> <span class="dotted-underline"> Programs </span></h2>
+					<p> PowerUp is a flagship GetUp event --- it will define our reputation with our most active committed GetUp members, many of our major donors,  </p>
+					<div class="button__wrapper">
+						<a class="button">Book now!</a>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-	
+	<div class="home__image home__image-left ghost" >
+	</div>
+
 </div>
+
+
+<div class="home__image-container">
+
+	<img src="images/vigil.jpg" class="home__image home__image-right">
+	
+
+	<div class="row expanded home__section-container">
+		<div class="small-6 columns gradient home__section-gradient radius-right">
+			<div class="row">
+				<div class="medium-8 medium-offset-4 columns">
+					<h2> <span class="dotted-underline"> Programs </span></h2>
+					<p> PowerUp is a flagship GetUp event --- it will define our reputation with our most active committed GetUp members, many of our major donors,  </p>
+					<div class="button__wrapper">
+						<a class="button">Book now!</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="home__image home__image-right ghost" >
+	</div>
+
+</div>
+
+
+
+
+
+<div class="row expanded caption-container">
+	<div class="small-12 columns">
+		<div class="row">
+			<div class="small-12 columns">
+				<h3 class="caption">
+					Key note speaker info and other random heading text to accompany.
+				</h3>
+				<div class="button__wrapper">
+					<a class="button caption__button">Book now!</a>
+				</div>
+
+			</div>
+		</div>
+	</div>
+</div>
+
+
 
 
 
