--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ description: PowerUp
 <img src="images/vigil.jpg">
 <div class="row">
 	<div class="small-12 columns home__hero">
-		<h1 class="title">PowerUp!</h1>
+		<h1 class="title">PowerDown!</h1>
 		<h3 class="sub-heading"> Key note speaker info and other random heading text to accompany. </h3>
 		<div class="button__wrapper">
 			<a class="button home__hero-button">Book now!</a>
