add a few editable classes for demo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ description: PowerUp
 <div class="row">
 	<div class="small-12 columns home__hero">
 		<h1 class="title">PowerUp!</h1>
-		<h3 class="sub-heading"> Key note speaker info and other random heading text to accompany. </h3>
+		<h3 class="sub-heading editable"> Key note speaker info and other random heading text to accompany. </h3>
 		<div class="button__wrapper">
 			<a class="button home__hero-button">Book now!</a>
 		</div>
@@ -19,7 +19,7 @@ description: PowerUp
 
 <div class="row">
 	<div class="small-12 columns home__our-story">
-		<h2 ><span class="dotted-underline"> Our Story </span></h2>
+		<h2 ><span class="dotted-underline editable"> Our Story </span></h2>
 		<p> PowerUp is a flagship GetUp event --- it will define our reputation with our most active committed GetUp members, many of our major donors, close allies, and sponsorsPowerUp is a flagship GetUp event --- it will define our reputation with our most active committed GetUp members, many of our major donors, close allies, and sponsors  </p>
 	</div>
 </div>
@@ -57,7 +57,7 @@ description: PowerUp
 		<div class="small-6 small-offset-6 columns gradient home__section-gradient radius-left">
 			<div class="row">
 				<div class="medium-8 columns">
-					<h2> <span class="dotted-underline"> Programs </span></h2>
+					<h2> <span class="dotted-underline editable"> Programs </span></h2>
 					<p> PowerUp is a flagship GetUp event --- it will define our reputation with our most active committed GetUp members, many of our major donors,  </p>
 					<div class="button__wrapper">
 						<a class="button">Book now!</a>
