more editable bits

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ description: PowerUp
 <div class="row">
 	<div class="small-12 columns home__our-story">
 		<h2 ><span class="dotted-underline editable"> Our Story </span></h2>
-		<p> PowerUp is a flagship GetUp event --- it will define our reputation with our most active committed GetUp members, many of our major donors, close allies, and sponsorsPowerUp is a flagship GetUp event --- it will define our reputation with our most active committed GetUp members, many of our major donors, close allies, and sponsors  </p>
+		<p class="dotted-editable"> PowerUp is a flagship GetUp event --- it will define our reputation with our most active committed GetUp members, many of our major donors, close allies, and sponsorsPowerUp is a flagship GetUp event --- it will define our reputation with our most active committed GetUp members, many of our major donors, close allies, and sponsors  </p>
 	</div>
 </div>
 
@@ -58,7 +58,7 @@ description: PowerUp
 			<div class="row">
 				<div class="medium-8 columns">
 					<h2> <span class="dotted-underline editable"> Programs </span></h2>
-					<p> PowerUp is a flagship GetUp event --- it will define our reputation with our most active committed GetUp members, many of our major donors,  </p>
+					<p class="dotted-editable"> PowerUp is a flagship GetUp event --- it will define our reputation with our most active committed GetUp members, many of our major donors,  </p>
 					<div class="button__wrapper">
 						<a class="button">Book now!</a>
 					</div>
