--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 ---
-title: "PowerUp!"
+title: 'PowerUp!'
 description: PowerUp
 ---
 
 <div class="white-bg">
 </div>
 
-<img src="images/vigil.jpg">
+<img src="images/vigil.jpg" />
 <div class="row">
 	<div class="small-12 columns home__hero">
 		<h1 class="title">PowerUp!</h1>
-		<h3 class="sub-heading editable"> Key note speaker info and other random heading text to accompany. </h3>
+		<h3 class="sub-heading editable">Tim is great!</h3>
 		<div class="button__wrapper">
 			<a class="button home__hero-button">Book now!</a>
 		</div>
@@ -19,7 +19,7 @@ description: PowerUp
 
 <div class="row">
 	<div class="small-12 columns home__our-story">
-		<h2 ><span class="dotted-underline editable"> Our Story </span></h2>
+		<h2><span class="dotted-underline editable"> Our Story </span></h2>
 		<p class="dotted-editable"> PowerUp is a flagship GetUp event --- it will define our reputation with our most active committed GetUp members, many of our major donors, close allies, and sponsorsPowerUp is a flagship GetUp event --- it will define our reputation with our most active committed GetUp members, many of our major donors, close allies, and sponsors  </p>
 	</div>
 </div>
@@ -50,7 +50,7 @@ description: PowerUp
 
 <div class="home__image-container">
 
-	<img src="images/vigil.jpg" class="home__image home__image-left">
+	<img src="images/vigil.jpg" class="home__image home__image-left" />
 	
 
 	<div class="row expanded home__section-container">
@@ -66,7 +66,7 @@ description: PowerUp
 			</div>
 		</div>
 	</div>
-	<div class="home__image home__image-left ghost" >
+	<div class="home__image home__image-left ghost">
 	</div>
 
 </div>
@@ -74,7 +74,7 @@ description: PowerUp
 
 <div class="home__image-container">
 
-	<img src="images/vigil.jpg" class="home__image home__image-right">
+	<img src="images/vigil.jpg" class="home__image home__image-right" />
 	
 
 	<div class="row expanded home__section-container">
@@ -90,7 +90,7 @@ description: PowerUp
 			</div>
 		</div>
 	</div>
-	<div class="home__image home__image-right ghost" >
+	<div class="home__image home__image-right ghost">
 	</div>
 
 </div>
