Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ description: PowerUp
 <div class="row">
 	<div class="small-12 columns home__hero">
 		<h1 class="title">PowerUp!</h1>
-		<h3 class="sub-heading editable">Tim is great!</h3>
+		<h3 class="sub-heading editable">Ben is great!</h3>
 		<div class="button__wrapper">
 			<a class="button home__hero-button">Book now!</a>
 		</div>
