--- a/index.html
+++ b/index.html
@@ -5,17 +5,24 @@ description: PowerUp
 
 <div class="white-bg">
 </div>
+<div class="gradientgradient"></div>
 
-<img src="images/vigil.jpg">
-<div class="row">
-	<div class="small-12 columns home__hero">
-		<h1 class="title">PowerUp!</h1>
-		<h3 class="sub-heading"> Key note speaker info and other random heading text to accompany. </h3>
-		<div class="button__wrapper">
-			<a class="button home__hero-button">Book now!</a>
+<div class="home-hero">
+	<img src="images/vigil.jpg" class="home-hero-image">
+	<img src="images/powerupheroimg.png" class="home-hero-image-powerup">
+	<div class="row">
+		<div class="small-12 columns">
+			<div class="texttext">
+				<h1 class="title">PowerUp!</h1>
+				<h3 class="sub-heading slab"> PowerUp is a flagship GetUp event, it will define our reputation 
+with our most active committed GetUp members.</h3>
+			</div>
 		</div>
+		<a class="button home-hero-button">Grab your ticket!</a>
 	</div>
+	
 </div>
+
 
 <div class="row">
 	<div class="small-12 columns home__our-story">
@@ -25,30 +32,63 @@ description: PowerUp
 </div>
 
 <div class="row narrative-container">
-	<div class="medium-2">
+	<div class="small-12 medium-2">
+		<img src="images/firstmembericon.png" class="narrative-icon">
 		<p class="narrative"> Join our first member conference </p>
 	</div>
 	<div class="medium-1">
 
 	</div>
-	<div class="medium-2">
+	<div class="small-12 medium-2">
+		<img src="images/firstmembericon.png" class="narrative-icon">
 		<p class="narrative"> Develop critical skills and GetUp’s strategy </p>
 	</div>
 	<div class="medium-1">
 
 	</div>
-	<div class="medium-2">
+	<div class="small-12 medium-2">
+		<img src="images/firstmembericon.png" class="narrative-icon">
 		<p class="narrative"> Develop critical skills and GetUp’s strategy </p>
 	</div>
 	<div class="medium-1">
 
 	</div>
-	<div class="medium-2">
+	<div class="small-12 medium-2">
+		<img src="images/firstmembericon.png" class="narrative-icon">
 		<p class="narrative"> Develop critical skills and GetUp’s strategy </p>
 	</div>
 </div>
 
-<div class="home__image-container">
+<div class="x-img-container">
+	<div class="x-home__image-container">
+		<div class="black">
+			<span class="reverse-skew black-container">
+				<h2> <span class="dotted-underline"> Programs </span></h2>
+				<p> PowerUp is a flagship GetUp event --- it will define our reputation with our most active committed GetUp members, many of our major donors, </p>
+				<a class="button home-hero-button">Grab your ticket!</a>
+			</span>
+		</div>
+		<img src="images/vigil.jpg">
+	</div>
+</div>
+<div class="x-img-container">
+	<div class="x-home__image-container">
+		<div class="black">
+			<span class="reverse-skew black-container">
+				<h2> <span class="dotted-underline"> Programs </span></h2>
+				<p> PowerUp is a flagship GetUp event --- it will define our reputation with our most active committed GetUp members, many of our major donors, </p>
+				<a class="button home-hero-button">Grab your ticket!</a>
+			</span>
+		</div>
+		<img src="images/vigil.jpg">
+	</div>
+</div>
+
+
+<!--<div class="home__image home__image-left ghost" >
+	</div>-->
+
+<!--<div class="home__image-container">
 
 	<img src="images/vigil.jpg" class="home__image home__image-left">
 	
@@ -69,10 +109,10 @@ description: PowerUp
 	<div class="home__image home__image-left ghost" >
 	</div>
 
-</div>
+</div>-->
 
 
-<div class="home__image-container">
+<!--<div class="home__image-container">
 
 	<img src="images/vigil.jpg" class="home__image home__image-right">
 	
@@ -93,7 +133,7 @@ description: PowerUp
 	<div class="home__image home__image-right ghost" >
 	</div>
 
-</div>
+</div>-->
 
 
 
