--- a/index.html
+++ b/index.html
@@ -60,28 +60,37 @@ with our most active committed GetUp members.</h3>
 </div>
 
 <div class="x-img-container">
+		<div class="white-border"> </div>
+		<div class="circle"> </div>
 	<div class="x-home__image-container">
 		<div class="black">
 			<span class="reverse-skew black-container">
+				<div>
+				<img src="images/firstmembericon.png" class="x-icon">
 				<h2> <span class="dotted-underline"> Programs </span></h2>
 				<p> PowerUp is a flagship GetUp event --- it will define our reputation with our most active committed GetUp members, many of our major donors, </p>
 				<a class="button home-hero-button">Grab your ticket!</a>
+				</div>
 			</span>
 		</div>
-		<img src="images/vigil.jpg">
+		<img src="images/vigil.jpg" class="x-home-image">
 	</div>
 </div>
 <div class="x-img-container">
+	<div class="white-border"> </div>
+	<div class="circle"> </div>
 	<div class="x-home__image-container">
-		<div class="black">
-			<span class="reverse-skew black-container">
+		<div class="black reverse">
+			<span class="reverse-skew black-container reverse">				
+				<img src="images/firstmembericon.png" class="x-icon">
 				<h2> <span class="dotted-underline"> Programs </span></h2>
 				<p> PowerUp is a flagship GetUp event --- it will define our reputation with our most active committed GetUp members, many of our major donors, </p>
 				<a class="button home-hero-button">Grab your ticket!</a>
 			</span>
 		</div>
-		<img src="images/vigil.jpg">
+		<img src="images/vigil.jpg" class="x-home-image">
 	</div>
+	<div class="white-border"> </div>
 </div>
 
 
