--- a/index.html
+++ b/index.html
@@ -3,15 +3,13 @@ title: 'PowerUp!'
 description: PowerUp
 ---
 
-<div class="white-bg">
-</div>
-<div class="gradientgradient"></div>
+
 
 <div class="home-hero">
 	<img src="images/vigil.jpg" class="home-hero-image">
 	<img src="images/powerupheroimg.png" class="home-hero-image-powerup">
 	<div class="row">
-		<div class="small-12 columns">
+		<div class="small-12 columns reset">
 			<div class="texttext">
 				<h1 class="title">PowerUp!</h1>
 				<h3 class="sub-heading slab"> PowerUp is a flagship GetUp event, it will define our reputation 
@@ -32,28 +30,28 @@ with our most active committed GetUp members.</h3>
 </div>
 
 <div class="row narrative-container">
-	<div class="small-12 medium-2">
+	<div class="small-6 medium-2">
 		<img src="images/firstmembericon.png" class="narrative-icon">
 		<p class="narrative"> Join our first member conference </p>
 	</div>
 	<div class="medium-1">
 
 	</div>
-	<div class="small-12 medium-2">
+	<div class="small-6 medium-2">
 		<img src="images/firstmembericon.png" class="narrative-icon">
 		<p class="narrative"> Develop critical skills and GetUp’s strategy </p>
 	</div>
 	<div class="medium-1">
 
 	</div>
-	<div class="small-12 medium-2">
+	<div class="small-6 medium-2">
 		<img src="images/firstmembericon.png" class="narrative-icon">
 		<p class="narrative"> Develop critical skills and GetUp’s strategy </p>
 	</div>
 	<div class="medium-1">
 
 	</div>
-	<div class="small-12 medium-2">
+	<div class="small-6 medium-2">
 		<img src="images/firstmembericon.png" class="narrative-icon">
 		<p class="narrative"> Develop critical skills and GetUp’s strategy </p>
 	</div>
@@ -69,7 +67,7 @@ with our most active committed GetUp members.</h3>
 				<img src="images/firstmembericon.png" class="x-icon">
 				<h2> <span class="dotted-underline"> Programs </span></h2>
 				<p> PowerUp is a flagship GetUp event --- it will define our reputation with our most active committed GetUp members, many of our major donors, </p>
-				<a class="button home-hero-button">Grab your ticket!</a>
+				<a class="button ">Grab your ticket!</a>
 				</div>
 			</span>
 		</div>
@@ -83,9 +81,9 @@ with our most active committed GetUp members.</h3>
 		<div class="black reverse">
 			<span class="reverse-skew black-container reverse">				
 				<img src="images/firstmembericon.png" class="x-icon">
-				<h2> <span class="dotted-underline"> Programs </span></h2>
+				<h2> <span class="dotted-underline"> Speakers </span></h2>
 				<p> PowerUp is a flagship GetUp event --- it will define our reputation with our most active committed GetUp members, many of our major donors, </p>
-				<a class="button home-hero-button">Grab your ticket!</a>
+				<a class="button">Grab your ticket!</a>
 			</span>
 		</div>
 		<img src="images/vigil.jpg" class="x-home-image">
@@ -163,6 +161,21 @@ with our most active committed GetUp members.</h3>
 		</div>
 	</div>
 </div>
+
+<div class="row expanded sponsor-container">
+	<div class="small-12 columns">
+		<div class="row">
+			<div class="small-12 columns">
+				<h3 class="sponsors">
+					Sponsors
+				</h3>
+
+			</div>
+		</div>
+	</div>
+</div>
+
+
 
 
 
