--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@ description: PowerUp
 
 
 
-<div class="home-hero">
+<!--<div class="home-hero">
 	<img src="images/vigil.jpg" class="home-hero-image">
-	<img src="images/powerupheroimg.png" class="home-hero-image-powerup">
+	<div class="home-hero-image-powerup-container">
+		<img src="images/powerup-header.png" class="home-hero-image-powerup">
+	</div>
 	<div class="row">
 		<div class="small-12 columns reset">
 			<div class="texttext">
-				<h1 class="title">PowerUp!</h1>
 				<h3 class="sub-heading slab"> PowerUp is a flagship GetUp event, it will define our reputation 
 with our most active committed GetUp members.</h3>
 			</div>
@@ -19,41 +20,60 @@ with our most active committed GetUp members.</h3>
 		<a class="button home-hero-button">Grab your ticket!</a>
 	</div>
 	
+</div>-->
+
+<div class="home-hero">
+	<img src="images/hero.jpg" class="home-hero-image">
+	<div class="home-hero-image-powerup-container">
+	</div>
+	<div class="row">
+		<div class="small-12 columns reset">
+		<img src="images/powerup-header.png" class="home-hero-image-powerup">
+			<div class="texttext">
+				<h3 class="sub-heading slab"> PowerUp is a flagship GetUp event, it will define our reputation 
+with our most active committed GetUp members.</h3>
+		<a class="button home-hero-button">Grab your ticket!</a>
+			</div>
+		</div>
+	</div>
+	
 </div>
 
 
 <div class="row">
 	<div class="small-12 columns home__our-story">
+		
+		<img src="images/icons/our-story.svg" class="center-icon">
 		<h2><span class="dotted-underline editable"> Our Story </span></h2>
 		<p class="editable"> PowerUp is a flagship GetUp event --- it will define our reputation with our most active committed GetUp members, many of our major donors, close allies, and sponsorsPowerUp is a flagship GetUp event --- it will define our reputation with our most active committed GetUp members, many of our major donors, close allies, and sponsors  </p>
 	</div>
 </div>
 
 <div class="row narrative-container">
-	<div class="small-6 medium-2">
-		<img src="images/firstmembericon.png" class="narrative-icon">
+	<div class="small-6 medium-2 columns">
+		<img src="images/icons/Join.svg" class="narrative-icon">
 		<p class="narrative"> Join our first member conference </p>
 	</div>
-	<div class="medium-1">
-
+	<div class="medium-1 columns arrow-icon-container">
+		<img src="images/arrowarrow.png" class="arrow-icon">
 	</div>
-	<div class="small-6 medium-2">
-		<img src="images/firstmembericon.png" class="narrative-icon">
+	<div class="small-6 medium-2 columns">
+		<img src="images/icons/Develop.svg" class="narrative-icon">
 		<p class="narrative"> Develop critical skills and GetUp’s strategy </p>
 	</div>
-	<div class="medium-1">
-
+	<div class="medium-1 columns arrow-icon-container">
+		<img src="images/arrowarrow.png" class="arrow-icon">
 	</div>
-	<div class="small-6 medium-2">
-		<img src="images/firstmembericon.png" class="narrative-icon">
-		<p class="narrative"> Develop critical skills and GetUp’s strategy </p>
+	<div class="small-6 medium-2 columns">
+		<img src="images/icons/Create.svg" class="narrative-icon">
+		<p class="narrative"> Create your local action groups </p>
 	</div>
-	<div class="medium-1">
-
+	<div class="medium-1 columns arrow-icon-container">
+		<img src="images/arrowarrow.png" class="arrow-icon">
 	</div>
-	<div class="small-6 medium-2">
-		<img src="images/firstmembericon.png" class="narrative-icon">
-		<p class="narrative"> Develop critical skills and GetUp’s strategy </p>
+	<div class="small-6 medium-2 columns">
+		<img src="images/icons/Scale.svg" class="narrative-icon">
+		<p class="narrative"> Scale up our movement to push for change </p>
 	</div>
 </div>
 
@@ -64,14 +84,14 @@ with our most active committed GetUp members.</h3>
 		<div class="black">
 			<span class="reverse-skew black-container">
 				<div>
-				<img src="images/firstmembericon.png" class="x-icon">
+				<img src="images/icons/program.svg" class="x-icon">
 				<h2> <span class="dotted-underline"> Programs </span></h2>
 				<p> PowerUp is a flagship GetUp event --- it will define our reputation with our most active committed GetUp members, many of our major donors, </p>
 				<a class="button ">Grab your ticket!</a>
 				</div>
 			</span>
 		</div>
-		<img src="images/vigil.jpg" class="x-home-image">
+		<img src="images/programs.jpg" class="x-home-image">
 	</div>
 </div>
 <div class="x-img-container">
@@ -80,76 +100,22 @@ with our most active committed GetUp members.</h3>
 	<div class="x-home__image-container">
 		<div class="black reverse">
 			<span class="reverse-skew black-container reverse">				
-				<img src="images/firstmembericon.png" class="x-icon">
+				<img src="images/icons/Speakers.svg" class="x-icon">
 				<h2> <span class="dotted-underline"> Speakers </span></h2>
 				<p> PowerUp is a flagship GetUp event --- it will define our reputation with our most active committed GetUp members, many of our major donors, </p>
 				<a class="button">Grab your ticket!</a>
 			</span>
 		</div>
-		<img src="images/vigil.jpg" class="x-home-image">
+		<img src="images/speakers.jpg" class="x-home-image">
 	</div>
 	<div class="white-border"> </div>
 </div>
-
-
-<!--<div class="home__image home__image-left ghost" >
-	</div>-->
-
-<!--<div class="home__image-container">
-
-	<img src="images/vigil.jpg" class="home__image home__image-left" />
-	
-
-	<div class="row expanded home__section-container">
-		<div class="small-6 small-offset-6 columns gradient home__section-gradient radius-left">
-			<div class="row">
-				<div class="medium-8 columns">
-					<h2> <span class="dotted-underline editable"> Programs </span></h2>
-					<p class="editable"> PowerUp is a flagship GetUp event --- it will define our reputation with our most active committed GetUp members, many of our major donors,  </p>
-					<div class="button__wrapper">
-						<a class="button">Book now!</a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="home__image home__image-left ghost">
-	</div>
-
-</div>-->
-
-
-<!--<div class="home__image-container">
-
-	<img src="images/vigil.jpg" class="home__image home__image-right" />
-	
-
-	<div class="row expanded home__section-container">
-		<div class="small-6 columns gradient home__section-gradient radius-right">
-			<div class="row">
-				<div class="medium-8 medium-offset-4 columns">
-					<h2> <span class="dotted-underline"> Programs </span></h2>
-					<p> PowerUp is a flagship GetUp event --- it will define our reputation with our most active committed GetUp members, many of our major donors,  </p>
-					<div class="button__wrapper">
-						<a class="button">Book now!</a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="home__image home__image-right ghost">
-	</div>
-
-</div>-->
-
-
-
-
 
 <div class="row expanded caption-container">
 	<div class="small-12 columns">
 		<div class="row">
 			<div class="small-12 columns">
+				<img src="images/icons/Tickets.svg" class="center-icon">
 				<h3 class="caption">
 					Key note speaker info and other random heading text to accompany.
 				</h3>
