--- a/index.html
+++ b/index.html
@@ -2,25 +2,10 @@
 title: 'PowerUp!'
 description: PowerUp
 ---
-
-
-
-<!--<div class="home-hero">
-	<img src="images/vigil.jpg" class="home-hero-image">
-	<div class="home-hero-image-powerup-container">
-		<img src="images/powerup-header.png" class="home-hero-image-powerup">
-	</div>
-	<div class="row">
-		<div class="small-12 columns reset">
-			<div class="texttext">
-				<h3 class="sub-heading slab"> PowerUp is a flagship GetUp event, it will define our reputation 
-with our most active committed GetUp members.</h3>
-			</div>
+<div class="white-bg">
 		</div>
-		<a class="button home-hero-button">Grab your ticket!</a>
-	</div>
-	
-</div>-->
+		<div class="gradientgradient"></div>
+
 
 <div class="home-hero">
 	<img src="images/hero.jpg" class="home-hero-image">
