made editable text

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@ description: PowerUp
 		<div class="small-12 columns reset">
 		<img src="images/powerup-header.png" class="home-hero-image-powerup">
 			<div class="texttext">
-				<h3 class="sub-heading slab"> PowerUp is a flagship GetUp event, it will define our reputation 
+				<h3 class="sub-heading slab editable"> PowerUp is a flagship GetUp event, it will define our reputation 
 with our most active committed GetUp members.</h3>
-		<a class="button home-hero-button">Grab your ticket!</a>
+		<a class="button home-hero-button editable">Grab your ticket!</a>
 			</div>
 		</div>
 	</div>
@@ -37,28 +37,28 @@ with our most active committed GetUp members.</h3>
 <div class="row narrative-container">
 	<div class="small-6 medium-2 columns">
 		<img src="images/icons/Join.svg" class="narrative-icon">
-		<p class="narrative"> Join our first member conference </p>
+		<p class="narrative editable"> Join our first member conference </p>
 	</div>
 	<div class="medium-1 columns arrow-icon-container">
-		<img src="images/arrowarrow.png" class="arrow-icon">
+		<img src="images/arrowarrow.png editable" class="arrow-icon">
 	</div>
 	<div class="small-6 medium-2 columns">
 		<img src="images/icons/Develop.svg" class="narrative-icon">
-		<p class="narrative"> Develop critical skills and GetUp’s strategy </p>
+		<p class="narrative editable"> Develop critical skills and GetUp’s strategy </p>
 	</div>
 	<div class="medium-1 columns arrow-icon-container">
 		<img src="images/arrowarrow.png" class="arrow-icon">
 	</div>
 	<div class="small-6 medium-2 columns">
 		<img src="images/icons/Create.svg" class="narrative-icon">
-		<p class="narrative"> Create your local action groups </p>
+		<p class="narrative editable"> Create your local action groups </p>
 	</div>
 	<div class="medium-1 columns arrow-icon-container">
 		<img src="images/arrowarrow.png" class="arrow-icon">
 	</div>
 	<div class="small-6 medium-2 columns">
 		<img src="images/icons/Scale.svg" class="narrative-icon">
-		<p class="narrative"> Scale up our movement to push for change </p>
+		<p class="narrative editable"> Scale up our movement to push for change </p>
 	</div>
 </div>
 
@@ -70,9 +70,9 @@ with our most active committed GetUp members.</h3>
 			<span class="reverse-skew black-container">
 				<div>
 				<img src="images/icons/program.svg" class="x-icon">
-				<h2> <span class="dotted-underline"> Programs </span></h2>
-				<p> PowerUp is a flagship GetUp event --- it will define our reputation with our most active committed GetUp members, many of our major donors, </p>
-				<a class="button ">Grab your ticket!</a>
+				<h2> <span class="dotted-underline editable"> Programs </span></h2>
+				<p class="editable"> PowerUp is a flagship GetUp event --- it will define our reputation with our most active committed GetUp members, many of our major donors, </p>
+				<a class="button editable">Grab your ticket!</a>
 				</div>
 			</span>
 		</div>
@@ -86,9 +86,9 @@ with our most active committed GetUp members.</h3>
 		<div class="black reverse">
 			<span class="reverse-skew black-container reverse">				
 				<img src="images/icons/Speakers.svg" class="x-icon">
-				<h2> <span class="dotted-underline"> Speakers </span></h2>
-				<p> PowerUp is a flagship GetUp event --- it will define our reputation with our most active committed GetUp members, many of our major donors, </p>
-				<a class="button">Grab your ticket!</a>
+				<h2> <span class="dotted-underline editable"> Speakers </span></h2>
+				<p class="editable"> PowerUp is a flagship GetUp event --- it will define our reputation with our most active committed GetUp members, many of our major donors, </p>
+				<a class="button editable">Grab your ticket!</a>
 			</span>
 		</div>
 		<img src="images/speakers.jpg" class="x-home-image">
@@ -101,11 +101,11 @@ with our most active committed GetUp members.</h3>
 		<div class="row">
 			<div class="small-12 columns">
 				<img src="images/icons/Tickets.svg" class="center-icon">
-				<h3 class="caption">
+				<h3 class="caption editable">
 					Key note speaker info and other random heading text to accompany.
 				</h3>
 				<div class="button__wrapper">
-					<a class="button caption__button">Book now!</a>
+					<a class="button caption__button editable">Book now!</a>
 				</div>
 
 			</div>
@@ -117,7 +117,7 @@ with our most active committed GetUp members.</h3>
 	<div class="small-12 columns">
 		<div class="row">
 			<div class="small-12 columns">
-				<h3 class="sponsors">
+				<h3 class="sponsors ">
 					Sponsors
 				</h3>
 
