--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ with our most active committed GetUp members.</h3>
 		<p class="narrative editable"> Join our first member conference </p>
 	</div>
 	<div class="medium-1 columns arrow-icon-container">
-		<img src="images/arrowarrow.png editable" class="arrow-icon">
+		<img src="images/arrowarrow.png" class="arrow-icon">
 	</div>
 	<div class="small-6 medium-2 columns">
 		<img src="images/icons/Develop.svg" class="narrative-icon">
@@ -117,10 +117,16 @@ with our most active committed GetUp members.</h3>
 	<div class="small-12 columns">
 		<div class="row">
 			<div class="small-12 columns">
-				<h3 class="sponsors ">
+				<h2 class="sponsors">
+					<span class="dotted-underline editable">
 					Sponsors
-				</h3>
-
+					</span>
+				</h2>
+				<div class="sponsor-icons">
+					<img src="images/icons/Tickets.svg" class="sponsor-icon">
+					<img src="images/icons/Tickets.svg" class="sponsor-icon">
+					<img src="images/icons/Tickets.svg" class="sponsor-icon">
+				</div>
 			</div>
 		</div>
 	</div>
