--- a/speakers.html
+++ b/speakers.html
@@ -162,3 +162,21 @@
         
 
 </div>
+
+
+<div class="row expanded caption-container reduced-gradient">
+	<div class="small-12 columns">
+		<div class="row">
+			<div class="small-12 columns">
+				<img src="../images/icons/Tickets.svg" class="center-icon">
+				<h3 class="caption editable">
+					Key note speaker info and other random heading text to accompany.
+				</h3>
+				<div class="button__wrapper">
+					<a class="button caption__button editable">Book now!</a>
+				</div>
+
+			</div>
+		</div>
+	</div>
+</div>
