--- a/speakers.html
+++ b/speakers.html
@@ -6,7 +6,7 @@
 <div class="x-img-container speakers-hero">
 		
 	<div class="x-home__image-container">
-		<div class="black reduced-gradient">
+		<div class="black blue-gradient">
 			<span class="reverse-skew black-container">
 				<div>
 				<img src="../images/icons/create.svg" class="x-icon">
